force-app/main/default/objects/animalos__Job__c/fields/animalos__Reported_Substance_Abuse__c.field-meta.xml
<CustomField>
    <fullName>animalos__Reported_Substance_Abuse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reported Substance Abuse</label>
    <type>Checkbox</type>
</CustomField>