force-app/main/default/objects/animalos__Job__c/fields/animalos__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>animalos__Start_Date__c</fullName>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>