force-app/main/default/objects/animalos__Job__c/fields/animalos__Status__c.field-meta.xml
<CustomField>
    <fullName>animalos__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>Under Investigation</fullName>
            </value>
            <value>
                <fullName>Under Reg Action</fullName>
            </value>
            <value>
                <fullName>Awaiting Recheck</fullName>
            </value>
            <value>
                <fullName>Pending Prosecution</fullName>
            </value>
            <value>
                <fullName>Awaiting Notification Response</fullName>
            </value>
            <value>
                <fullName>Awaiting Further Information</fullName>
            </value>
            <value>
                <fullName>Awaiting Assignment</fullName>
            </value>
            <value>
                <fullName>Awaiting Re-Assignment</fullName>
            </value>
            <value>
                <fullName>Awaiting Attendance</fullName>
            </value>
            <value>
                <fullName>In Attendance</fullName>
            </value>
            <value>
                <fullName>Working on Job</fullName>
            </value>
            <value>
                <fullName>Attended – CC left</fullName>
            </value>
            <value>
                <fullName>Attended – enquires continuing</fullName>
            </value>
            <value>
                <fullName>Departed Job</fullName>
            </value>
            <value>
                <fullName>Equipment Set</fullName>
            </value>
            <value>
                <fullName>Follow Up Required</fullName>
            </value>
            <value>
                <fullName>Awaiting AWD Compliance Check</fullName>
            </value>
            <value>
                <fullName>Covering Inspector -Assigned</fullName>
            </value>
            <value>
                <fullName>Covering Inspector – Awaiting Attendance</fullName>
            </value>
            <value>
                <fullName>Covering Inspector – Preliminary Enquiries Made</fullName>
            </value>
            <value>
                <fullName>Notes outstanding</fullName>
            </value>
            <value>
                <fullName>Pending Forfeiture Application</fullName>
            </value>
            <value>
                <fullName>Pending Forfeiture decision</fullName>
            </value>
            <value>
                <fullName>Pending FBOE</fullName>
            </value>
            <value>
                <fullName>Pending FBOE Application Decision</fullName>
            </value>
            <value>
                <fullName>Preliminary inquiries made</fullName>
            </value>
            <value>
                <fullName>Prosecution Commenced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>