force-app/main/default/objects/animalos__Job__c/fields/animalos__Subject__c.field-meta.xml
<CustomField>
    <fullName>animalos__Subject__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>