force-app/main/default/objects/animalos__Job__c/fields/animalos__Type__c.field-meta.xml
<CustomField>
    <fullName>animalos__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Animal Welfare</fullName>
            </value>
            <value>
                <fullName>Animal Welfare - Intel</fullName>
            </value>
            <value>
                <fullName>Animal Welfare - Referred Externally</fullName>
            </value>
            <value>
                <fullName>Proactive Job</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>