force-app/main/default/objects/animalos__Job__c/fields/aos_Action_Flag__c.field-meta.xml
<CustomField>
    <fullName>aos_Action_Flag__c</fullName>
    <formula>IF(
	AND(OR(NOT(ISPICKVAL(animalos__Status__c, &apos;Finalised&apos;)), NOT(ISPICKVAL(animalos__Status__c, &apos;Cancelled&apos;))), OR(animalos__Latest_Recheck_Date__c &lt;= TODAY(),  ISPICKVAL(animalos__Priority__c, &apos;Critical&apos;))),
	IMAGE(&quot;/resource/animalos__indicatorIcons/red.png&quot;,&quot;RED&quot;, 30, -1),
	IF(
		AND(OR(NOT(ISPICKVAL(animalos__Status__c, &apos;Finalised&apos;)), NOT(ISPICKVAL(animalos__Status__c, &apos;Cancelled&apos;))), ISPICKVAL( aos_Future_Action_Required__c, &apos;Awaiting Reply&apos; )),
		IMAGE(&quot;/resource/animalos__indicatorIcons/orange.png&quot;,&quot;ORANGE&quot;, 30, -1),
		IF(
			AND(OR(NOT(ISPICKVAL(animalos__Status__c, &apos;Finalised&apos;)), NOT(ISPICKVAL(animalos__Status__c, &apos;Cancelled&apos;))), ISPICKVAL( aos_Future_Action_Required__c, &apos;Phone Call&apos; )),
			IMAGE(&quot;/resource/animalos__indicatorIcons/grey.png&quot;,&quot;GREY&quot;, 30, -1),
			IMAGE(&quot;/resource/animalos__indicatorIcons/green.png&quot;,&quot;GREEN&quot;, 30, -1)	
		)
	)
)</formula>
    <label>Action Flag</label>
    <type>Text</type>
</CustomField>