force-app/main/default/objects/animalos__Job__c/fields/aos_Animal_Fighting_Formula__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal_Fighting_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Animal Fighting&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Animal Fighting Formula</label>
    <type>Checkbox</type>
</CustomField>