force-app/main/default/objects/animalos__Job__c/fields/aos_Animal_in_Hot_Vehicle_Formula__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal_in_Hot_Vehicle_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Animal in hot vehicle&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Animal in Hot Vehicle Formula</label>
    <type>Checkbox</type>
</CustomField>