force-app/main/default/objects/animalos__Job__c/fields/aos_Anonymous__c.field-meta.xml
<CustomField>
    <fullName>aos_Anonymous__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anonymous</label>
    <type>Checkbox</type>
</CustomField>