force-app/main/default/objects/animalos__Job__c/fields/aos_Attendance_Recommendation_Notes__c.field-meta.xml
<CustomField>
    <fullName>aos_Attendance_Recommendation_Notes__c</fullName>
    <label>Attendance Recommendation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>