force-app/main/default/objects/animalos__Job__c/fields/aos_Baiting_Formula__c.field-meta.xml
<CustomField>
    <fullName>aos_Baiting_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Baiting&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Baiting Formula</label>
    <type>Checkbox</type>
</CustomField>