force-app/main/default/objects/animalos__Job__c/fields/aos_Case__c.field-meta.xml
<CustomField>
    <fullName>aos_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>aos_Jobs_AnimalOS</relationshipName>
    <type>Lookup</type>
</CustomField>