force-app/main/default/objects/animalos__Job__c/fields/aos_Cock_Fighting_Formula__c.field-meta.xml
<CustomField>
    <fullName>aos_Cock_Fighting_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Cock Fighting&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cock Fighting Formula</label>
    <type>Checkbox</type>
</CustomField>