force-app/main/default/objects/animalos__Job__c/fields/aos_Complexity__c.field-meta.xml
<CustomField>
    <fullName>aos_Complexity__c</fullName>
    <label>Complexity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>