force-app/main/default/objects/animalos__Job__c/fields/aos_Concern_For_Welfare_Formula__c.field-meta.xml
<CustomField>
    <fullName>aos_Concern_For_Welfare_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Concern For Welfare&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Concern For Welfare Formula</label>
    <type>Checkbox</type>
</CustomField>