force-app/main/default/objects/animalos__Job__c/fields/aos_Cruelty_Formula__c.field-meta.xml
<CustomField>
    <fullName>aos_Cruelty_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Cruelty&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cruelty Formula</label>
    <type>Checkbox</type>
</CustomField>