force-app/main/default/objects/animalos__Job__c/fields/aos_Drought_Formula__c.field-meta.xml
<CustomField>
    <fullName>aos_Drought_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Drought&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drought Formula</label>
    <type>Checkbox</type>
</CustomField>