force-app/main/default/objects/animalos__Job__c/fields/aos_Future_Action_Required__c.field-meta.xml
<CustomField>
    <fullName>aos_Future_Action_Required__c</fullName>
    <label>Future Action Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attendance</fullName>
            </value>
            <value>
                <fullName>Awaiting Reply</fullName>
            </value>
            <value>
                <fullName>Office Task</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Ref to other Org</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>