force-app/main/default/objects/animalos__Job__c/fields/aos_Hoarding_Formula__c.field-meta.xml
<CustomField>
    <fullName>aos_Hoarding_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Hoarding&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hoarding Formula</label>
    <type>Checkbox</type>
</CustomField>