force-app/main/default/objects/animalos__Job__c/fields/aos_Home_Alone_Formula__c.field-meta.xml
<CustomField>
    <fullName>aos_Home_Alone_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Home Alone&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Home Alone Formula</label>
    <type>Checkbox</type>
</CustomField>