force-app/main/default/objects/animalos__Job__c/fields/aos_Ill_Treatment_Formula__c.field-meta.xml
<CustomField>
    <fullName>aos_Ill_Treatment_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Ill Treatment&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ill Treatment Formula</label>
    <type>Checkbox</type>
</CustomField>