force-app/main/default/objects/animalos__Job__c/fields/aos_Inappropriate_Breeding_Formula__c.field-meta.xml
<CustomField>
    <fullName>aos_Inappropriate_Breeding_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Inappropriate Breeding&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inappropriate Breeding Formula</label>
    <type>Checkbox</type>
</CustomField>