force-app/main/default/objects/animalos__Job__c/fields/aos_Inappropriate_Transport_Formula__c.field-meta.xml
<CustomField>
    <fullName>aos_Inappropriate_Transport_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Inappropriate Transport&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inappropriate Transport Formula</label>
    <type>Checkbox</type>
</CustomField>