force-app/main/default/objects/animalos__Job__c/fields/aos_Inspectorate_Activity_Count__c.field-meta.xml
<CustomField>
    <fullName>aos_Inspectorate_Activity_Count__c</fullName>
    <label>Inspectorate Activity Count</label>
    <summaryForeignKey>animalos__Job_Activity__c.animalos__Job__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>