force-app/main/default/objects/animalos__Job__c/fields/aos_Job_Type__c.field-meta.xml
<CustomField>
    <fullName>aos_Job_Type__c</fullName>
    <label>Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Animal Owner Requesting Assistance</fullName>
            </value>
            <value>
                <fullName>Animal Stuck in Tree</fullName>
            </value>
            <value>
                <fullName>Animal Trapped in Water</fullName>
            </value>
            <value>
                <fullName>Animal Trapped</fullName>
            </value>
            <value>
                <fullName>Bird In Building</fullName>
            </value>
            <value>
                <fullName>C2 Bat</fullName>
            </value>
            <value>
                <fullName>C3 Bat</fullName>
            </value>
            <value>
                <fullName>Displaced Wildlife</fullName>
            </value>
            <value>
                <fullName>Dog/ Cat Attack</fullName>
            </value>
            <value>
                <fullName>Drain Rescue</fullName>
            </value>
            <value>
                <fullName>Fire Event</fullName>
            </value>
            <value>
                <fullName>Fishing Line Entanglement</fullName>
            </value>
            <value>
                <fullName>Flood Event</fullName>
            </value>
            <value>
                <fullName>HEA Bequest Assistance Request</fullName>
            </value>
            <value>
                <fullName>Heat Related</fullName>
            </value>
            <value>
                <fullName>Hit By Car</fullName>
            </value>
            <value>
                <fullName>Injured</fullName>
            </value>
            <value>
                <fullName>Inspectorate Assistance Request</fullName>
            </value>
            <value>
                <fullName>Koala Requiring Rescue</fullName>
            </value>
            <value>
                <fullName>Koala Sighting</fullName>
            </value>
            <value>
                <fullName>Livestock Rescue</fullName>
            </value>
            <value>
                <fullName>Oiled Wildlife</fullName>
            </value>
            <value>
                <fullName>Orphaned Juvenile</fullName>
            </value>
            <value>
                <fullName>Other Entanglement</fullName>
            </value>
            <value>
                <fullName>Owner Surrender</fullName>
            </value>
            <value>
                <fullName>Provide Emergency Relief</fullName>
            </value>
            <value>
                <fullName>Rescue at Height</fullName>
            </value>
            <value>
                <fullName>Roof Cavity</fullName>
            </value>
            <value>
                <fullName>Shelter Assistance Request</fullName>
            </value>
            <value>
                <fullName>Sick/ Illness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>