force-app/main/default/objects/animalos__Job__c/fields/aos_Kennel_Inspection_Formula__c.field-meta.xml
<CustomField>
    <fullName>aos_Kennel_Inspection_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Kennel Inspection&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kennel Inspection Formula</label>
    <type>Checkbox</type>
</CustomField>