force-app/main/default/objects/animalos__Job__c/fields/aos_Killed_Formula__c.field-meta.xml
<CustomField>
    <fullName>aos_Killed_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Killed&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Killed Formula</label>
    <type>Checkbox</type>
</CustomField>