force-app/main/default/objects/animalos__Job__c/fields/aos_LGA__c.field-meta.xml
<CustomField>
    <fullName>aos_LGA__c</fullName>
    <formula>aos_Postcode__r.aos_LGA__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LGA</label>
    <type>Text</type>
</CustomField>