force-app/main/default/objects/animalos__Job__c/fields/aos_Living_Conditions_Formula__c.field-meta.xml
<CustomField>
    <fullName>aos_Living_Conditions_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Living Conditions&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Living Conditions Formula</label>
    <type>Checkbox</type>
</CustomField>