force-app/main/default/objects/animalos__Job__c/fields/aos_Locked_In_Shed_Formula__c.field-meta.xml
<CustomField>
    <fullName>aos_Locked_In_Shed_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Locked In Shed&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Locked In Shed Formula</label>
    <type>Checkbox</type>
</CustomField>