force-app/main/default/objects/animalos__Job__c/fields/aos_Locked_In_Small_Pen_Formula__c.field-meta.xml
<CustomField>
    <fullName>aos_Locked_In_Small_Pen_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Locked In Small Pen&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Locked In Small Pen Formula</label>
    <type>Checkbox</type>
</CustomField>