force-app/main/default/objects/animalos__Job__c/fields/aos_Medicine_Used__c.field-meta.xml
<CustomField>
    <fullName>aos_Medicine_Used__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Medicine Used</label>
    <referenceTo>animalos__Medicine__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>aos_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>