force-app/main/default/objects/animalos__Job__c/fields/aos_MOP_Ability_to_Help__c.field-meta.xml
<CustomField>
    <fullName>aos_MOP_Ability_to_Help__c</fullName>
    <label>MOP Ability to Help</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Can Help</fullName>
            </value>
            <value>
                <fullName>Unable to Help</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>