force-app/main/default/objects/animalos__Job__c/fields/aos_No_Code_Formula__c.field-meta.xml
<CustomField>
    <fullName>aos_No_Code_Formula__c</fullName>
    <formula>IF(ISBLANK( animalos__Codes__c), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Code Formula</label>
    <type>Checkbox</type>
</CustomField>