force-app/main/default/objects/animalos__Job__c/fields/aos_No_Exercise_Confined_Tethered__c.field-meta.xml
<CustomField>
    <fullName>aos_No_Exercise_Confined_Tethered__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;No Exercise | Confined | Tethered&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Exercise Confined Tethered Formula</label>
    <type>Checkbox</type>
</CustomField>