force-app/main/default/objects/animalos__Job__c/fields/aos_No_Treatment_Formula__c.field-meta.xml
<CustomField>
    <fullName>aos_No_Treatment_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;No Treatment&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Treatment Formula</label>
    <type>Checkbox</type>
</CustomField>