force-app/main/default/objects/animalos__Job__c/fields/aos_Old_Job_Number__c.field-meta.xml
<CustomField>
    <fullName>aos_Old_Job_Number__c</fullName>
    <label>Old Job Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>