force-app/main/default/objects/animalos__Job__c/fields/aos_Old_Job_Number_Without_Leading_Zeros__c.field-meta.xml
<CustomField>
    <fullName>aos_Old_Job_Number_Without_Leading_Zeros__c</fullName>
    <label>Old Job Number Without Leading Zeros</label>
    <length>255</length>
    <type>Text</type>
</CustomField>